--- a/numbers.html
+++ b/numbers.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <button id="minus" class="btn btn-primary">-1</button>
-    <input id="num" type="number">
+    <input id="num" type="number" value=0 disabled>
     <button id="plus" class="btn btn-primary">+1</button>
     
 </body>
